Main container overflow bug fixed

--- a/common.blocks/page/page.css
+++ b/common.blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
 	display: grid;
 	grid-template-columns: minmax(200px, 15%) 1fr 1fr;
-	grid-template-rows: auto 1fr auto;
+	grid-template-rows: auto minmax(100px, 1fr) auto;
 	grid-column-gap: 15px;
 	grid-row-gap: 15px;
 	grid-template-areas: 
